--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,8 +15,7 @@
     "import os\n",
     "\n",
     "# Import API key\n",
-    "#from secret1 import g_key\n",
-    "g_key = 'AIzaSyD5XLWpG2i4fdxni4VRTLk9r6ovKfcS8ig'"
+    "from secret1 import g_key\n"
    ]
   },
   {
