--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -16,8 +16,8 @@
     "from scipy import stats\n",
     "\n",
     "# Import API key\n",
-    "#from secret import api_key_w\n",
-    "api_key = \"c49e94f29f9eff614a3e7cbf6f6876d5\"\n",
+    "from secret import api_key_w\n",
+    "\n",
     "# Incorporated citipy to determine city based on latitude and longitude\n",
     "from citipy import citipy\n",
     "\n",
